# project_ai_singer

./: .env copy  .gitignore  README.md  app.py  pyproject.toml
modules/: pyncm_downloader.py  vocal_separater.py
modules/msst/: utils_msst.py
modules/msst/models/: mdx23c_tfc_tdf_v3.py  segm_models.py  torchseg_models.py  upernet_swin_transformers.py
modules/msst/models/bs_roformer/: __init__.py  bs_roformer.py  mel_band_roformer.py
modules/msst/models/scnet_unofficial/modules/: sd_encoder.py  su_decoder.py
modules/svc/: models.py  svc_converter.py  utils_svc.py
modules/svc/inference/: infer_tool.py
modules/svc/modules/: attentions.py  modules.py
modules/svc/modules/F0Predictor/: CrepeF0Predictor.py  DioF0Predictor.py  FCPEF0Predictor.py  HarvestF0Predictor.py  PMF0Predictor.py  RMVPEF0Predictor.py
modules/svc/vencoder/: CNHubertLarge.py  ContentVec256L12_Onnx.py  ContentVec256L9.py  ContentVec256L9_Onnx.py  ContentVec768L12.py  ContentVec768L12_Onnx.py  ContentVec768L9_Onnx.py  DPHubert.py  HubertSoft.py  HubertSoft_Onnx.py  WavLMBasePlus.py  WhisperPPG.py  WhisperPPGLarge.py  encoder.py
music_downloader/: pyncm_downloader.py
templates/: index.html
utils/: loguru_logger.py  thread_.py
