[project]
name = "project-ai-singer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.3.0",
    "annotated-types==0.7.0",
    "ansicon==1.89.0",
    "antlr4-python3-runtime==4.9.3",
    "audioread==3.0.1",
    "audiosegment>=0.23.0",
    "beartype==0.21.0",
    "bitarray==3.4.2",
    "blessed==1.21.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "cython==3.1.2",
    "decorator==5.2.1",
    "demucs==4.0.0",
    "diffq==0.2.4",
    "dora-search==0.1.12",
    "editor==1.6.6",
    "einops==0.8.1",
    "fairseq",
    "faiss-cpu==1.11.0",
    "filelock==3.18.0",
    "flask>=3.1.1",
    "fonttools==4.58.4",
    "fsspec==2025.5.1",
    "huggingface-hub==0.33.0",
    "hydra-core==1.3.2",
    "idna==3.10",
    "inquirer==3.4.0",
    "jinja2==3.1.6",
    "jinxed==1.3.0",
    "joblib==1.5.1",
    "julius==0.2.7",
    "kiwisolver==1.4.8",
    "lameenc==1.8.1",
    "librosa==0.9.1",
    "llvmlite==0.44.0",
    "loguru==0.7.3",
    "lxml==5.4.0",
    "matplotlib==3.10.3",
    "ml-collections==1.1.0",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "nvidia-ml-py==12.575.51",
    "omegaconf==2.3.0",
    "openunmix==1.3.0",
    "packaging==25.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "pooch==1.8.2",
    "portalocker==3.2.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pyncm==1.7.1",
    "pynvml==12.0.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pywin32==310",
    "pyyaml==6.0.2",
    "qrcode==8.2",
    "readchar==4.2.1",
    "regex==2024.11.6",
    "requests==2.32.4",
    "resampy==0.4.3",
    "retrying==1.3.4",
    "rotary-embedding-torch==0.8.6",
    "runs==1.2.2",
    "sacrebleu==2.5.1",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "segmentation-models-pytorch==0.5.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "soundfile==0.13.1",
    "submitit==1.5.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "threadpoolctl==3.6.0",
    "timm==1.0.15",
    "tokenizers==0.21.1",
    "tqdm==4.63.0",
    "transformers==4.52.4",
    "treetable==0.2.5",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "win32-setctime==1.2.0",
    "xmod==1.8.1",
]

[tool.uv.sources]
fairseq = { git = "https://github.com/One-sixth/fairseq.git", rev = "44800430a728c2216fd1cf1e8daa672f50dfacba" }
